# drone3plot

./: .gitignore  .gitmodules  README.md  biome.json  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
apps/: __init__.py
apps/control/: README.md  __init__.py  bootstrap.py  config.py  main.py  main_complex.py  main_plane.py  main_takeoff.py  main_vertical.py  main_yaw.py
apps/control/core/: __init__.py  complex_runtime.py  complex_state.py  complex_targets.py  complex_utils.py  controller.py  datasource.py  mission_runner.py  pid.py  plane_logic.py  pose_service.py  yaw_logic.py
apps/dashboard/: __init__.py  extensions.py  main.py
apps/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/mediaweb/: README.md  blueprint.py
doc/: drc_state_machine.md  mission_state_machine.md  pointcloud_pipeline.md  usage.md
doc/api/: mqtt_spec.md
mediaweb/: README.md  __init__.py  app.py  fetch_one.py
public/trajectories/: default_trajectory.json
scripts/: headless_start.sh  las-color-report.js  odom_mqtt.py  pointcloud-report.js
server/: app.py  config.py  mediaweb.py
server/dji_dashboard/: __init__.py  main.py
src/: App.css  App.tsx  index.css
src/components/: MissionPlanner.tsx  PointCloudLayer.tsx  Sidebar.tsx  WaypointMarker.tsx
src/config/: trajectories.ts  ui.ts
src/lib/: pointCloudCache.ts  pointCloudLoader.ts  trajectoryStorage.ts
src/styles/: cards.css  dock.css  forms.css  layout.css  responsive.css
src/types/: mission.ts
src/workers/: pointCloudWorker.ts
videostream/: get-mediamtx.sh
(+179 files in other folders)
